# mcp-cor

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  handoff-personal-hermes.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cor_mcp_server/: __init__.py  __main__.py  auth.py  client.py  context.py  models.py  server.py
cor_mcp_server/tools/: __init__.py  allocations.py  clients.py  contracts.py  labels.py  messaging.py  products.py  projects.py  ratecards.py  tasks.py  team.py  time_tracking.py
skills/cor-api-tools/: SKILL.md
skills/cor-auth/: SKILL.md
skills/cor-mcp-server/: SKILL.md
skills/cor-mcp-setup/: SKILL.md
tests/: test_tools.py
