[project]
name = "cor-mcp-server"
version = "0.1.0"
description = "Comprehensive MCP server for Project COR — exposes the full COR REST API as MCP tools"
authors = [
    {name = "Alejandro Duran", email = "alejandro.duran@omnicommedia.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cor-mcp-server = "cor_mcp_server.__main__:main"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cor_mcp_server*"]
